[gd_scene load_steps=7 format=3 uid="uid://dsy32b2by7jp6"]

[ext_resource type="Script" path="res://mvc/views/Node2D/BuildingAction/BuildingAction.gd" id="1_rgwm8"]
[ext_resource type="Texture2D" uid="uid://2m7kvd7nwoe1" path="res://mvc/views/images/interface/layers/buildingInfoPanel.png" id="2_061kg"]
[ext_resource type="Texture2D" uid="uid://chu5wfl6tehla" path="res://mvc/views/images/icons/chemistry.png" id="3_g0kju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2tdad"]
bg_color = Color(0.360784, 0.486275, 0.568627, 0)

[sub_resource type="Theme" id="Theme_h8q8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ec2k"]
bg_color = Color(0.294118, 0.329412, 0.278431, 0.815686)

[node name="PanelBuildingAction" type="Node2D"]
z_index = 10
position = Vector2(-5.99997, 2.00002)
scale = Vector2(0.65, 0.65)
script = ExtResource("1_rgwm8")

[node name="PanelGlobal" type="Panel" parent="."]
theme_override_styles/panel = SubResource("StyleBoxFlat_2tdad")

[node name="name" type="Label" parent="PanelGlobal"]
z_index = 10
layout_mode = 0
offset_left = 1468.15
offset_top = 216.461
offset_right = 1775.15
offset_bottom = 315.461
theme_override_constants/line_spacing = -7
theme_override_font_sizes/font_size = 24
text = "Nom"
horizontal_alignment = 2
vertical_alignment = 2
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="PanelGlobal"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1388.0
offset_top = -3.0
offset_right = 1802.0
offset_bottom = 1006.0
theme = SubResource("Theme_h8q8o")
texture = ExtResource("2_061kg")

[node name="PanelAction" type="Panel" parent="PanelGlobal"]
layout_mode = 1
offset_left = 1418.0
offset_top = 565.0
offset_right = 1776.0
offset_bottom = 980.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5ec2k")
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="PanelGlobal/PanelAction"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.073
anchor_top = 0.041
anchor_right = 0.073
anchor_bottom = 0.041
offset_left = -11.456
offset_top = 2.28155
offset_right = 318.544
offset_bottom = 381.282
grow_horizontal = 2
grow_vertical = 2
localize_numeral_system = false
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 5

[node name="renove" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "faire des travaux"

[node name="hire_teacher" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "- enseignants +"

[node name="hire_worker" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "- ouvriers +"

[node name="increase_pay" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = " -800 €  salaire +800 €   "

[node name="lock" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "  off verrouillage on  "

[node name="heat" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "off chauffage on"

[node name="add_exem_entry" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "- sélection à l'entrée +
"

[node name="add_exem_end" type="Button" parent="PanelGlobal/PanelAction/GridContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 25
text = "- sélection en fin d'année +
"

[node name="PanelStat" type="Panel" parent="PanelGlobal"]
layout_mode = 0
offset_left = 1418.0
offset_top = 335.0
offset_right = 1776.0
offset_bottom = 550.0
theme_override_styles/panel = SubResource("StyleBoxFlat_5ec2k")
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="PanelGlobal/PanelStat"]
layout_mode = 0
offset_left = 22.0
offset_top = 6.84634
offset_right = 339.0
offset_bottom = 205.846
theme_override_constants/v_separation = 4

[node name="budget" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- budget"

[node name="renovation" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- état des lieux"

[node name="mood_student" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- satisfaction etudiante"

[node name="level" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- niveau moyen"

[node name="mood_teacher" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- satisfaction enseignante"

[node name="end_exam" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- end exam"

[node name="entry_exam" type="Label" parent="PanelGlobal/PanelStat/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "- entry exam"

[node name="icon" type="Sprite2D" parent="PanelGlobal"]
position = Vector2(1479.48, 246.951)
scale = Vector2(1.89125, 1.85981)
texture = ExtResource("3_g0kju")

[node name="Sprite2D" type="Sprite2D" parent="PanelGlobal"]

[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/renove" to="." method="_on_renove_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/hire_teacher" to="." method="_on_hire_teacher_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/hire_worker" to="." method="_on_hire_worker_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/increase_pay" to="." method="_on_increase_pay_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/lock" to="." method="_on_lock_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/heat" to="." method="_on_heat_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/add_exem_entry" to="." method="_on_add_exem_entry_pressed"]
[connection signal="pressed" from="PanelGlobal/PanelAction/GridContainer/add_exem_end" to="." method="_on_add_exem_end_pressed"]
